--- a/tools/rollup/helpers/componentExampleTemplate.html
+++ b/tools/rollup/helpers/componentExampleTemplate.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="node_modules/@mamba/core-styles/dist/styles.css">
   </head>
   <body>
     <div id="root"></div>
