--- a/docs-sapper/app/App.html
+++ b/docs-sapper/app/App.html
@@ -6,6 +6,6 @@
 	import Layout from 'layout/Layout.svelte';
 
 	export default {
-	  components: { Layout }
+	  components: { Layout },
 	};
 </script>
