Add Directory Structure

--- a/docs-sapper/routes/guide/index.html
+++ b/docs-sapper/routes/guide/index.html
@@ -175,6 +175,10 @@
     & :global(.code-block-container) {
       margin-top: 18px;
     }
+
+    & :global(h4) {
+      margin-top: 30px;
+    }
   }
 
   section:last-child {
