Run linter on eeeeverything

--- a/packages/pos/drivers/printer/panel.html
+++ b/packages/pos/drivers/printer/panel.html
@@ -13,7 +13,7 @@
 <script>
   export default {
     components: {
-      Switch: '@mamba/switch'
+      Switch: '@mamba/switch',
     },
-  }
+  };
 </script>
