--- a/packages/pos/drivers/printer/panel.html
+++ b/packages/pos/drivers/printer/panel.html
@@ -3,10 +3,7 @@
 <ul class="controllers">
   <li class="controller">
     <span>Impressora sem papel?</span>
-    <Switch
-      checked={shouldFail}
-      on:change="set({ shouldFail: event.value })"
-    />
+    <Switch bind:checked="panel.shouldFail" />
   </li>
 </ul>
 
