--- a/tools/jest/__mocks__/TestApp.html
+++ b/tools/jest/__mocks__/TestApp.html
@@ -83,6 +83,9 @@
       query(selector) {
         return this.options.target.querySelector(selector);
       },
+      queryAll(selector) {
+        return this.options.target.querySelectorAll(selector);
+      },
     },
   };
 </script>
