fix: 🐛 no-scroll not preventing scroll

--- a/tools/jest/mocks/Root.html
+++ b/tools/jest/mocks/Root.html
@@ -28,7 +28,7 @@
           navigable: { home: true, back: true },
           shortcuts: true,
           scrollable: true,
-          _hasAppbar: false,
+          hasAppbar: false,
         },
         methods: {
           setNavigable(o) {
