fix: 🐛 Fix doBeforeClose state

--- a/tools/jest/mocks/Root.html
+++ b/tools/jest/mocks/Root.html
@@ -30,6 +30,7 @@
           shortcuts: true,
           scrollable: true,
           hasAppbar: false,
+          doBeforeClose: false,
         },
         methods: {
           setNavigable(o) {
@@ -42,6 +43,9 @@
                 paramsBack: params,
               },
             });
+          },
+          setActionBeforeClose(param) {
+            this.set({ doBeforeClose: param });
           },
         },
       });
