style: 💄 force lint more files

--- a/tools/jest/mocks/Root.html
+++ b/tools/jest/mocks/Root.html
@@ -68,7 +68,7 @@
         });
 
         if (methods) {
-          Object.keys(methods).forEach(key => {
+          Object.keys(methods).forEach((key) => {
             instance[key] = methods[key].bind(instance);
           });
         }
